# Gobang

./: README.md  hello.txt  project.config  testst_file.txt
Camera_calibration/: CMakeLists.txt  Pictures.xml  README.md  camera_calibration.cpp  default.xml
Check/: CMakeLists.txt  InitChessBoard.cpp  README.md  check.cpp  out_camera_data.xml
