cmake_minimum_required(VERSION 2.8)
project(in_VID5.xml)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(in_VID5.xml in_VID5.xml.cpp)
target_link_libraries(in_VID5.xml ${OpenCV_LIBS})
